# polymarket-mm

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.smoketest.yaml  config.yaml
scripts/: approve_allowance.py
src/: config.py  main.py  models.py
src/client/: gamma.py  polymarket.py  websocket_client.py
src/execution/: order_manager.py  paper_exchange.py  rate_limiter.py
src/market_selector/: selector.py
src/pricing/: base.py  composite.py  odds_api.py  orderbook.py  vig.py
src/risk/: risk_manager.py
src/strategy/: inventory.py  quote_engine.py  scoring.py
src/utils/: dashboard.py  logging.py  metrics.py
tests/: conftest.py  test_composite_pricer.py  test_config.py  test_gamma_client.py  test_inventory.py  test_market_selector.py  test_odds_api_pricer.py  test_order_manager.py  test_orderbook_pricer.py  test_paper_exchange.py  test_quote_engine.py  test_rate_limiter.py  test_risk_manager.py  test_scoring.py  test_vig.py  test_websocket_client.py
